HUD can now be edited in config, minor refacts